deploy/service1Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
  labels: 
    project: microservice
    app: microservice1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
      - name: service1
        image: err/backend-service1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 1122
          name: svc1-port
