deploy/service2Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  labels: 
    app: microservice2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: service2
        image: err/backend-service2
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
          name: svc2-port
