deploy/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-lb
  labels:
    project: microservice
    app: microservice-lb
spec:
  type: LoadBalancer
  selector: 
    app: microservice2
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
      protocol: TCP
