deploy/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro1-service
  labels:
    app: micro1-service
spec:
  ports:
  - name: service1-port-ext
    port: 1122
    protocol: TCP
    targetPort: svc1-port
  selector:
    app: microservice1
