deploy/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro2-service
  labels:
    project: microservice
    app: micro2-service
spec:
  ports:
  - name: service2-port-ext
    port: 80
    protocol: TCP
    targetPort: svc2-port
  selector:
    app: microservice2
